--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,15 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
+
 }
+
 
 dependencies {
 
@@ -57,9 +65,11 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
-    testImplementation 'junit:junit:4.13-beta-3'
+//    testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    testImplementation "io.mockk:mockk:1.9.3"
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.browser:browser:1.2.0-beta01"
@@ -113,7 +123,7 @@ dependencies {
     // Better dateTime-time support even on older Android versions
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
 
-    // search bary
+    // search bar
     implementation "com.paulrybitskyi.persistentsearchview:persistentsearchview:1.1.1"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
