--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'de.mannodermaus.android-junit5'
+
 
 android {
     compileSdkVersion 29
@@ -21,6 +23,10 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArgument "runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder"
+
     }
     buildTypes {
         release {
@@ -34,8 +40,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = "1.8"
@@ -49,9 +55,15 @@ android {
         unitTests.all {
             useJUnitPlatform()
         }
+        unitTests.returnDefaultValues = true
     }
 
+    packagingOptions {
+        exclude("META-INF/LICENSE*")
+    }
 }
+
+
 
 
 dependencies {
@@ -65,10 +77,22 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
-//    testImplementation 'junit:junit:4.13-beta-3'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
-    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+
+//    androidTestImplementation 'androidx.test:core:1.2.0'
+//    androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
+//    testImplementation 'junit:junit:4.12'
+
+//    instrumentation tests
+    androidTestImplementation "androidx.test:runner:1.2.0"
+    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
+    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.2.0"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.2.0"
+    androidTestImplementation "io.mockk:mockk-android:1.9.3"
+
+//    unit tests
+    testImplementation "io.kotlintest:kotlintest-runner-junit5:3.4.2"
     testImplementation "io.mockk:mockk:1.9.3"
 
     implementation 'androidx.cardview:cardview:1.0.0'
