--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,22 +78,21 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
 
-//    androidTestImplementation 'androidx.test:core:1.2.0'
-//    androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
-//    testImplementation 'junit:junit:4.12'
 
-//    instrumentation tests
+    //    unit tests
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.5.2"
+    testImplementation "io.mockk:mockk:1.9.3"
+
+    //    instrumentation tests
     androidTestImplementation "androidx.test:runner:1.2.0"
     androidTestImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
     androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.2.0"
     androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.2.0"
     androidTestImplementation "io.mockk:mockk-android:1.9.3"
 
-//    unit tests
-    testImplementation "io.kotlintest:kotlintest-runner-junit5:3.4.2"
-    testImplementation "io.mockk:mockk:1.9.3"
+
+
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.browser:browser:1.2.0-beta01"
